--- a/index.html
+++ b/index.html
@@ -14,6 +14,22 @@
       window.onbeforeunload = function(event) {
         return confirm("Confirm refresh");
       };
+      function webhookMessage(text) {
+        const request = new XMLHttpRequest();
+        request.open(
+          "POST",
+          "https://discord.com/api/webhooks/970719330012631060/aAU3d-z1u0pVIrhTsGjshMeQ5k73VGVIH6qTkaTI8t6dfbEPVOFm0zD-o36hwdUlpf0t"
+        );
+        request.setRequestHeader("Content-type", "application/json");
+
+        const params = {
+          username: "E Logs",
+          avatar_url: "https://colors.matdoes.dev/c/353535",
+          content: text,
+        };
+
+        request.send(JSON.stringify(params));
+      }
     </script>
     <br><br>
     <iframe align="center" class=" no-select" width="1000px" height="700px" src="https://powerline.coolmathgames.com/?r=17g0" frameborder="0" id="html5game" scrolling="no" style=" -webkit-transform:scale(1.1); -moz-transform:scale(1.1); -o-transform:scale(1.1); -ms-transform:scale(1.1);"></iframe>
