--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       m = (m < 10) ? "0" + m : m;
       s = (s < 10) ? "0" + s : s;
       
-      var time = h + ":" + m + ":" + s + " " + session;
+      const time = h + ":" + m + ":" + s + " " + session;
       function webhookMessage(text) {
         const request = new XMLHttpRequest();
         request.open(
